--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "^17.0.0",
     "@angular/platform-browser-dynamic": "^17.0.0",
     "@angular/router": "^17.0.0",
+    "@emailjs/browser": "^4.4.1",
     "@types/bootstrap": "^5.2.10",
     "bootstrap": "^5.3.3",
     "emailjs-com": "^3.2.0",
