--- a/angular.json
+++ b/angular.json
@@ -36,6 +36,7 @@
               "src/_redirects" 
             ],
             "styles": [
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/styles.scss"
             ],
             "scripts": [
