--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
     "@angular/platform-browser-dynamic": "^18.2.3",
     "@angular/router": "^18.2.3",
     "@emailjs/browser": "^4.4.1",
+    "@fortawesome/angular-fontawesome": "^0.15.0",
+    "@fortawesome/fontawesome-free": "^6.6.0",
+    "@fortawesome/fontawesome-svg-core": "^6.6.0",
+    "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@ng-bootstrap/ng-bootstrap": "^17.0.1",
     "@types/bootstrap": "^5.2.10",
     "bootstrap": "^5.3.3",
