--- a/angular.json
+++ b/angular.json
@@ -36,6 +36,7 @@
               "src/_redirects" 
             ],
             "styles": [
+              "src/assets/fonts/Guton-MultipleVariants.scss",
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/styles.scss",
               "node_modules/@fortawesome/fontawesome-free/css/all.min.css"
